--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
   <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+    <div class="row note-row">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 center-block note-col">
         <form>
           <div class="form-group">
             <label for="title">Note Title</label>
