--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           </div>
           <div class="form-group">
             <label for="exampleTextarea">Note Description</label>
-            <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+            <textarea class="form-control" id="descr" rows="3"></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">Save Note</button>
+          <button type="submit" id="submit" class="btn btn-primary">Save Note</button>
         </form>
       </div>
     </div>
