Onenote is coming, almost there

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
   <div class="container">
     <div class="row note-row">
+      <h1 class="text-center">New Note</h1>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 center-block note-col">
         <form>
           <div class="form-group">
@@ -26,6 +27,14 @@
           </div>
           <button type="submit" id="submit" class="btn btn-primary">Save Note</button>
         </form>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <h1>All Notes</h1>
+        <div id="note-group">
+
+        </div>
       </div>
     </div>
   </div>
